config.ini options moved to memory